other/FilipinoCodeParser.py
# Generated from FilipinoCode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FilipinoCodeParser ( Parser ):

    grammarFileName = "FilipinoCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'+'", "':'", "'.'", "'main'", 
                     "'buhat'", "'uwianNa'", "'lods'", "'charot'", "'padayon'", 
                     "'forever'", "'use'", "'deposit'", "'withdraw'", "'showBalance'", 
                     "'transfer'", "'computeInterest'", "'sa'", "'gikan'", 
                     "'ngadto'", "'account'", "'bilang'", "'dobols'", "'emoji'", 
                     "'tsismis'", "'bulyan'", "<INVALID>", "'Waley'", "'ngutana'", 
                     "'yawit'", "'dagdag'", "'bawas'", "'dobolDobol'", "'hati'", 
                     "'sobra'", "'etoNaLods'", "'parehasLods'", "'diParehasLods'", 
                     "'masGamay'", "'masDako'", "'saktoGamay'", "'saktoDako'", 
                     "'++'", "'--'", "<INVALID>", "<INVALID>", "'dili'", 
                     "'ediwow'", "'edi'", "'ediAno'", "'weh'", "'sakalam'", 
                     "'('", "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MAIN", "FUNCTION", "RETURN", "VAR", 
                      "BREAK", "CONTINUE", "CONST", "USE", "DEPOSIT", "WITHDRAW", 
                      "SHOWBALANCE", "TRANSFER", "COMPUTEINTEREST", "SA", 
                      "GIKAN", "NGADTO", "KW_ACCOUNT", "KW_INT", "KW_DOUBLE", 
                      "KW_CHAR", "KW_STRING", "KW_BOOLEAN", "BOOLEAN_LITERAL", 
                      "NULL_LITERAL", "READ", "PRINT", "PLUS", "MINUS", 
                      "MULT", "DIV", "MODULO", "ASSIGN", "EQ", "NEQ", "LT", 
                      "GT", "LEQ", "GEQ", "INCREMENT", "DECREMENT", "AND", 
                      "OR", "NOT", "IF", "ELSE", "ELSE_IF", "WHILE", "FOR", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMICOLON", 
                      "COMMA", "IDENTIFIER", "FLOAT", "INTEGER", "STRING", 
                      "CHAR", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_module = 1
    RULE_main_function = 2
    RULE_function_content = 3
    RULE_statement = 4
    RULE_deposit_statement = 5
    RULE_withdraw_statement = 6
    RULE_show_balance_statement = 7
    RULE_transfer_statement = 8
    RULE_interest_statement = 9
    RULE_break_statement = 10
    RULE_continue_statement = 11
    RULE_assignment_statement = 12
    RULE_expression = 13
    RULE_bool_expr = 14
    RULE_bool_term = 15
    RULE_relational_expr = 16
    RULE_arith_expr = 17
    RULE_arith_term = 18
    RULE_arith_factor = 19
    RULE_value = 20
    RULE_vardecl_statement = 21
    RULE_data_type = 22
    RULE_identifier_list = 23
    RULE_funcdecl_list = 24
    RULE_function_declaration = 25
    RULE_function_signature = 26
    RULE_funccall = 27
    RULE_funccall_stmt = 28
    RULE_parameter_list = 29
    RULE_parameter = 30
    RULE_actual_parameter_list = 31
    RULE_return_statement = 32
    RULE_block = 33
    RULE_if_statement = 34
    RULE_while_statement = 35
    RULE_for_statement = 36
    RULE_print_statement = 37
    RULE_input_statement = 38
    RULE_constdecl_list = 39
    RULE_const_statement = 40
    RULE_use_list = 41
    RULE_use_statement = 42

    ruleNames =  [ "program", "module", "main_function", "function_content", 
                   "statement", "deposit_statement", "withdraw_statement", 
                   "show_balance_statement", "transfer_statement", "interest_statement", 
                   "break_statement", "continue_statement", "assignment_statement", 
                   "expression", "bool_expr", "bool_term", "relational_expr", 
                   "arith_expr", "arith_term", "arith_factor", "value", 
                   "vardecl_statement", "data_type", "identifier_list", 
                   "funcdecl_list", "function_declaration", "function_signature", 
                   "funccall", "funccall_stmt", "parameter_list", "parameter", 
                   "actual_parameter_list", "return_statement", "block", 
                   "if_statement", "while_statement", "for_statement", "print_statement", 
                   "input_statement", "constdecl_list", "const_statement", 
                   "use_list", "use_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    MAIN=5
    FUNCTION=6
    RETURN=7
    VAR=8
    BREAK=9
    CONTINUE=10
    CONST=11
    USE=12
    DEPOSIT=13
    WITHDRAW=14
    SHOWBALANCE=15
    TRANSFER=16
    COMPUTEINTEREST=17
    SA=18
    GIKAN=19
    NGADTO=20
    KW_ACCOUNT=21
    KW_INT=22
    KW_DOUBLE=23
    KW_CHAR=24
    KW_STRING=25
    KW_BOOLEAN=26
    BOOLEAN_LITERAL=27
    NULL_LITERAL=28
    READ=29
    PRINT=30
    PLUS=31
    MINUS=32
    MULT=33
    DIV=34
    MODULO=35
    ASSIGN=36
    EQ=37
    NEQ=38
    LT=39
    GT=40
    LEQ=41
    GEQ=42
    INCREMENT=43
    DECREMENT=44
    AND=45
    OR=46
    NOT=47
    IF=48
    ELSE=49
    ELSE_IF=50
    WHILE=51
    FOR=52
    LPAREN=53
    RPAREN=54
    LBRACE=55
    RBRACE=56
    SEMICOLON=57
    COMMA=58
    IDENTIFIER=59
    FLOAT=60
    INTEGER=61
    STRING=62
    CHAR=63
    LINE_COMMENT=64
    BLOCK_COMMENT=65
    WS=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_function(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Main_functionContext,0)


        def EOF(self):
            return self.getToken(FilipinoCodeParser.EOF, 0)

        def use_list(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Use_listContext,0)


        def constdecl_list(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Constdecl_listContext,0)


        def funcdecl_list(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Funcdecl_listContext,0)


        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FilipinoCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 86
                self.use_list()


            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 89
                self.constdecl_list()


            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 92
                self.funcdecl_list()


            self.state = 95
            self.main_function()
            self.state = 96
            self.match(FilipinoCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FilipinoCodeParser.EOF, 0)

        def constdecl_list(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Constdecl_listContext,0)


        def funcdecl_list(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Funcdecl_listContext,0)


        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = FilipinoCodeParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 98
                self.constdecl_list()


            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 101
                self.funcdecl_list()


            self.state = 104
            self.match(FilipinoCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(FilipinoCodeParser.FUNCTION, 0)

        def MAIN(self):
            return self.getToken(FilipinoCodeParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(FilipinoCodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FilipinoCodeParser.RPAREN, 0)

        def function_content(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Function_contentContext,0)


        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_main_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function" ):
                listener.enterMain_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function" ):
                listener.exitMain_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function" ):
                return visitor.visitMain_function(self)
            else:
                return visitor.visitChildren(self)




    def main_function(self):

        localctx = FilipinoCodeParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(FilipinoCodeParser.FUNCTION)
            self.state = 107
            self.match(FilipinoCodeParser.MAIN)
            self.state = 108
            self.match(FilipinoCodeParser.LPAREN)
            self.state = 109
            self.match(FilipinoCodeParser.RPAREN)
            self.state = 110
            self.function_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(FilipinoCodeParser.BlockContext,0)


        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_function_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_content" ):
                listener.enterFunction_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_content" ):
                listener.exitFunction_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_content" ):
                return visitor.visitFunction_content(self)
            else:
                return visitor.visitChildren(self)




    def function_content(self):

        localctx = FilipinoCodeParser.Function_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Assignment_statementContext,0)


        def SEMICOLON(self):
            return self.getToken(FilipinoCodeParser.SEMICOLON, 0)

        def funccall_stmt(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Funccall_stmtContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.For_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Return_statementContext,0)


        def block(self):
            return self.getTypedRuleContext(FilipinoCodeParser.BlockContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Continue_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Print_statementContext,0)


        def input_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Input_statementContext,0)


        def vardecl_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Vardecl_statementContext,0)


        def deposit_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Deposit_statementContext,0)


        def withdraw_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Withdraw_statementContext,0)


        def show_balance_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Show_balance_statementContext,0)


        def transfer_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Transfer_statementContext,0)


        def interest_statement(self):
            return self.getTypedRuleContext(FilipinoCodeParser.Interest_statementContext,0)


        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = FilipinoCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.assignment_statement()
                self.state = 115
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.funccall_stmt()
                self.state = 118
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.for_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.return_statement()
                self.state = 124
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 126
                self.block()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 127
                self.break_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 128
                self.continue_statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 129
                self.print_statement()
                self.state = 130
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 132
                self.input_statement()
                self.state = 133
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 135
                self.vardecl_statement()
                self.state = 136
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 138
                self.deposit_statement()
                self.state = 139
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 141
                self.withdraw_statement()
                self.state = 142
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 144
                self.show_balance_statement()
                self.state = 145
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 147
                self.transfer_statement()
                self.state = 148
                self.match(FilipinoCodeParser.SEMICOLON)
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 150
                self.interest_statement()
                self.state = 151
                self.match(FilipinoCodeParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Deposit_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPOSIT(self):
            return self.getToken(FilipinoCodeParser.DEPOSIT, 0)

        def expression(self):
            return self.getTypedRuleContext(FilipinoCodeParser.ExpressionContext,0)


        def SA(self):
            return self.getToken(FilipinoCodeParser.SA, 0)

        def IDENTIFIER(self):
            return self.getToken(FilipinoCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_deposit_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeposit_statement" ):
                listener.enterDeposit_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeposit_statement" ):
                listener.exitDeposit_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeposit_statement" ):
                return visitor.visitDeposit_statement(self)
            else:
                return visitor.visitChildren(self)




    def deposit_statement(self):

        localctx = FilipinoCodeParser.Deposit_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deposit_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(FilipinoCodeParser.DEPOSIT)
            self.state = 156
            self.expression()
            self.state = 157
            self.match(FilipinoCodeParser.SA)
            self.state = 158
            self.match(FilipinoCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Withdraw_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITHDRAW(self):
            return self.getToken(FilipinoCodeParser.WITHDRAW, 0)

        def expression(self):
            return self.getTypedRuleContext(FilipinoCodeParser.ExpressionContext,0)


        def SA(self):
            return self.getToken(FilipinoCodeParser.SA, 0)

        def IDENTIFIER(self):
            return self.getToken(FilipinoCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_withdraw_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithdraw_statement" ):
                listener.enterWithdraw_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithdraw_statement" ):
                listener.exitWithdraw_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithdraw_statement" ):
                return visitor.visitWithdraw_statement(self)
            else:
                return visitor.visitChildren(self)




    def withdraw_statement(self):

        localctx = FilipinoCodeParser.Withdraw_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_withdraw_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(FilipinoCodeParser.WITHDRAW)
            self.state = 161
            self.expression()
            self.state = 162
            self.match(FilipinoCodeParser.SA)
            self.state = 163
            self.match(FilipinoCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_balance_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOWBALANCE(self):
            return self.getToken(FilipinoCodeParser.SHOWBALANCE, 0)

        def LPAREN(self):
            return self.getToken(FilipinoCodeParser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(FilipinoCodeParser.IDENTIFIER, 0)

        def RPAREN(self):
            return self.getToken(FilipinoCodeParser.RPAREN, 0)

        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_show_balance_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_balance_statement" ):
                listener.enterShow_balance_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_balance_statement" ):
                listener.exitShow_balance_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_balance_statement" ):
                return visitor.visitShow_balance_statement(self)
            else:
                return visitor.visitChildren(self)




    def show_balance_statement(self):

        localctx = FilipinoCodeParser.Show_balance_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_show_balance_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(FilipinoCodeParser.SHOWBALANCE)
            self.state = 166
            self.match(FilipinoCodeParser.LPAREN)
            self.state = 167
            self.match(FilipinoCodeParser.IDENTIFIER)
            self.state = 168
            self.match(FilipinoCodeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Transfer_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFER(self):
            return self.getToken(FilipinoCodeParser.TRANSFER, 0)

        def expression(self):
            return self.getTypedRuleContext(FilipinoCodeParser.ExpressionContext,0)


        def GIKAN(self):
            return self.getToken(FilipinoCodeParser.GIKAN, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(FilipinoCodeParser.IDENTIFIER)
            else:
                return self.getToken(FilipinoCodeParser.IDENTIFIER, i)

        def NGADTO(self):
            return self.getToken(FilipinoCodeParser.NGADTO, 0)

        def getRuleIndex(self):
            return FilipinoCodeParser.RULE_transfer_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransfer_statement" ):
                listener.enterTransfer_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransfer_statement" ):
                listener.exitTransfer_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransfer_statement" ):
                return visitor.visitTransfer_statement(self)
            else:
                return visitor.visitChildren(self)




    def transfer_statement(self):
